--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Roboto, sans-serif;
+}
+
 .header,
 .top-header,
 .main-header,
@@ -10,6 +14,73 @@
     flex-direction: column;
 }
 
+.hero {
+    width: 400px;
+    font-size: 48px;
+    font-weight: 800;
+    color: #f9faf8;
+}
+
+.main-info {
+    width: 500px;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.logo {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: bold;
+}
+
+.header {
+    background-color: #1f2937;
+}
+
+.left-header {
+    gap: 8px;
+}
+
+.main-header {
+    justify-content: center;
+    margin: 100px;
+    gap: 200px;
+}
+
 button {
+    font-weight: 800;
+    color: white;
+    border-color: transparent;
+    border-radius: 10px;
+    padding: 8px;
+    background-color: #3882f6;
+    margin-top: 8px;
     width: 100px;
+}
+
+.image-header {
+    display: flex;
+    color: white;
+    background: grey;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+}
+
+.top-header {
+    padding: 16px;
+    justify-content: space-around;
+}
+
+a {
+    color: #e5e7eb;
+    text-decoration: none;
+}
+
+ul {
+    gap: 16px;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    list-style-type: none;
 }
