--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
-    font-family: Roboto, sans-serif;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Roboto', sans-serif;
+    margin: 0px;
 }
 
 .header,
@@ -34,6 +37,7 @@ body {
 }
 
 .header {
+    height: 500px;
     background-color: #1f2937;
 }
 
@@ -50,12 +54,20 @@ body {
 button {
     font-weight: 800;
     color: white;
-    border-color: transparent;
     border-radius: 10px;
     padding: 8px;
     background-color: #3882f6;
     margin-top: 8px;
     width: 100px;
+}
+
+#signup-1 {
+    border-color: transparent;
+}
+
+#signup-2 {
+    border-style: solid;
+    border-color: white;
 }
 
 .image-header {
@@ -83,4 +95,121 @@ ul {
     padding: 0px;
     display: flex;
     list-style-type: none;
+}
+
+.footer {
+    color: white;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #1f2937;
+}
+
+.random-info,
+.quote,
+.call-sign-up {
+    height: 450px;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    background: #e5e7eb;
+    align-items: center;
+    justify-content: center;
+}
+
+.quote-content {
+    width: 790px;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1f2937;
+}
+
+.author {
+    padding: 0px 50px 0px 0px;
+    display: flex;
+    width: 790px;
+    justify-content: right;
+    font-size: 24px;
+    font-weight: bold;
+    color: #1f2937;
+}
+
+.random-info {
+    text-align: center;
+}
+
+.title {
+    margin: 30px;
+    color: #1f291f;
+    font-size: 36px;
+    font-weight: 800;
+    margin-bottom: 32px;
+}
+  
+.info {
+    display: flex;
+    gap: 50px;
+    margin: 50px 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.text {
+    width: 168px;
+}
+
+.one,
+.two,
+.three,
+.four {
+    gap: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+.img-1,
+.img-2,
+.img-3,
+.img-4 {
+    border: 4px solid #3882F6;
+    border-radius: 20px;
+    height: 168px;;
+    width: 168px;
+}
+
+.call-sign-up {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner {
+    width: 1000px;
+    height: 150px;
+    display: flex;
+    background: #3882f6;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.banner-left {
+    color: white;
+}
+
+.banner-left-1 {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.banner-left-2 {
+    font-size: 12px;
 }
